--- a/frontend/src/Game.css
+++ b/frontend/src/Game.css
@@ -28,6 +28,16 @@
   grid-template-rows: 2fr 1fr;
 }
 
+.DataContainer {
+  left: 80%;
+  bottom: 30%;
+  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+
+  background-color: black;
+}
+
 .ActionListEditorContainer {
   right: 80%;
   bottom: 30%;
@@ -35,7 +45,7 @@
   display: grid;
   flex-direction: row;
   grid-template-columns: 1fr;
-  grid-template-rows: 100px 1fr;
+  grid-template-rows: 150px 1fr;
 
   background-color: black;
 }
